--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,25 @@
+2013-8-6:
+  * Cleaned up the docs.
+
+2013-8-5:
+  * Added howbig.par().
+  * Added better print handling of approximate returns.
+
+2013-8-4:
+  * Enhanced the vignette.
+  * Added vignette cover.
+
+2013-8-3:
+  * Method "object_size()" now returns memuse objects.
+
+2013-8-2:
+  * Added approximate sizes for howmany() output.
+  * Made internals more consistent.
+  * Better internal documentation.
+
+2013-7-17:
+  * Fixed title.
+
 ======================= Log Before Release =====================================
 2013-7-16:
   * Finishing touches for CRAN.
